tests/samples/invalid/non_abi_in_extern.pn
extern fn foo(a: bool, b: u128);
